# Recomendation-System

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  recommendation.ipynb  requirements.txt  run.sh  setup.cfg
config/: __init__.py  config.py
models/: __init__.py  base_.py  early_stopping.py  recsys.py  surprise_models.py  torch_model.py
notebooks/: recommendation.ipynb  test_functions.ipynb
pipeline/: pipeline.py
preprocess/: preprocessing.py
preprocessing/: preprocessing.py
rec_utils/: __init__.py  rec_utils.py
score/: score.py
watch_it/: __init__.py  watch_it.py
